force-app/main/default/objects/Order/fields/CreditMemoAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditMemoAmount__c</fullName>
    <description>This is used to store the Credit Memo Amount</description>
    <inlineHelpText>Credit Memo Order Total Amount</inlineHelpText>
    <label>Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>