force-app/main/default/objects/Order/fields/CreditMemoDescription__c.field-meta.xml
<CustomField>
    <fullName>CreditMemoDescription__c</fullName>
    <description>This is used to store credit memo description</description>
    <label>Credit Memo Description</label>
    <type>TextArea</type>
</CustomField>