force-app/main/default/objects/Order/fields/CreditMemoOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditMemoOrderAmount__c</fullName>
    <inlineHelpText>Credit Memo Order Total Amount</inlineHelpText>
    <label>Credit Memo Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>