force-app/main/default/objects/Order/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <description>This is used to store Discount Amount</description>
    <inlineHelpText>Overall Order Discount</inlineHelpText>
    <label>Payment Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>