force-app/main/default/objects/Order/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>This field is used to calculate Due date on the basis of Activation date + Payment Terms</description>
    <formula>IF(NOT(ISNULL( ActivatedDate )) ,  IF( PaymentTerms__c &gt; 0  ,   ActivatedDate + PaymentTerms__c ,   ActivatedDate  ) , Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>