force-app/main/default/objects/Order/fields/OrderExternalNo__c.field-meta.xml
<CustomField>
    <fullName>OrderExternalNo__c</fullName>
    <formula>IF( NOT( ISBLANK(Opportunity.OderExternalNo__c)), Opportunity.OderExternalNo__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order External No</label>
    <type>Text</type>
</CustomField>