force-app/main/default/objects/Order/fields/OrderPaidDate__c.field-meta.xml
<CustomField>
    <fullName>OrderPaidDate__c</fullName>
    <description>This is used to store the paid date of order</description>
    <label>Order Paid Date</label>
    <type>Date</type>
</CustomField>