force-app/main/default/objects/Order/fields/OrderProductUniqueId__c.field-meta.xml
<CustomField>
    <fullName>OrderProductUniqueId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is used to store order products unique id on the order to stop duplication of order products</description>
    <label>Order Product Unique Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>