force-app/main/default/objects/Order/fields/OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store Original Order Lookup</description>
    <label>Original Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.OpportunityId</field>
            <operation>equals</operation>
            <valueField>$Source.OpportunityId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Credit Memo Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>