force-app/main/default/objects/Order/fields/Orignal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Orignal_Amount__c</fullName>
    <formula>IF(RecordType.Name = &apos;Credit Memo&apos;, -1  * (NetAmount__c  + ShippingFees__c +  CreditMemoAmount__c ),  (NetAmount__c + ShippingFees__c) -  DiscountAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount without Credit Memo</inlineHelpText>
    <label>Orignal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>