force-app/main/default/objects/Order/fields/OrignelOrderAccount__c.field-meta.xml
<CustomField>
    <fullName>OrignelOrderAccount__c</fullName>
    <description>This is used store Account of Original Order</description>
    <formula>AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orignel Order Account</label>
    <type>Text</type>
</CustomField>