force-app/main/default/objects/Order/fields/Parent_unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_unique_Id__c</fullName>
    <description>This field is used to store unique parent Id of opportunity in Order</description>
    <label>Parent unique Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>