force-app/main/default/objects/Order/fields/ShippingFees__c.field-meta.xml
<CustomField>
    <fullName>ShippingFees__c</fullName>
    <defaultValue>20.01</defaultValue>
    <label>Shipping Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>