force-app/main/default/objects/Order/fields/TaskCreated__c.field-meta.xml
<CustomField>
    <fullName>TaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Is used to check orde has already task or not</description>
    <label>Task Created</label>
    <type>Checkbox</type>
</CustomField>