force-app/main/default/objects/Order/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>This Field is used to calculate the Complete total amount including Tax , Shipping fees and Order Amount</description>
    <formula>IF(RecordType.Name = &apos;Credit Memo&apos;, -1  * ( NetAmount__c  + ShippingFees__c +  CreditMemoAmount__c -  DiscountAmount__c ),  ( NetAmount__c + ShippingFees__c) -  DiscountAmount__c + CreditMemoOrderAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net amount + Shipping fees - Payment Discount - Credit Memo</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>