force-app/main/default/objects/Order/fields/Via__c.field-meta.xml
<CustomField>
    <fullName>Via__c</fullName>
    <description>This is Temporary Field</description>
    <label>Via</label>
    <length>15</length>
    <type>Text</type>
</CustomField>