force-app/main/default/objects/Order/recordTypes/Credit_Memo.recordType-meta.xml
<RecordType>
    <fullName>Credit_Memo</fullName>
    <active>true</active>
    <description>This Record type is used to Create credit memo type orders</description>
    <label>Credit Memo</label>
</RecordType>