force-app/main/default/objects/Order/recordTypes/Standard_Order.recordType-meta.xml
<RecordType>
    <fullName>Standard_Order</fullName>
    <active>true</active>
    <description>This is Used to Create standard Order Record</description>
    <label>Standard Order</label>
</RecordType>