force-app/main/default/objects/Order/validationRules/Activated_Order_Field_Update_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Activated_Order_Field_Update_Validation</fullName>
    <active>true</active>
    <description>This is used to Restrict the user to update Fileds when the Order Status Activated</description>
    <errorConditionFormula>AND( 

ISPICKVAL( Status , &apos;Activated&apos;) , 
NOT(ISCHANGED(Status )), NOT( ISCHANGED( PaymentTerms__c )),NOT( ISCHANGED( OwnerId  )),NOT( ISCHANGED(  PaymentType__c )),
NOT( ISCHANGED(   CreditMemoOrderAmount__c )),NOT( ISCHANGED(    DiscountAmount__c )),NOT( ISCHANGED(     TaskCreated__c ))

)</errorConditionFormula>
    <errorMessage>You Can’t modify the values of Activated Order</errorMessage>
</ValidationRule>