force-app/main/default/objects/Order/validationRules/Credit_Memo_Draft_Creation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Memo_Draft_Creation_Validation</fullName>
    <active>true</active>
    <description>This is used to Restrict the user to create a Credit Memo order if the original order is draft</description>
    <errorConditionFormula>AND( ISNEW() , RecordType.Name =&apos;Credit Memo&apos;,  ISPICKVAL( OriginalOrder__r.Status , &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>You can&apos;t create Credit Order when Original Order is Draft</errorMessage>
</ValidationRule>