force-app/main/default/objects/Order/validationRules/Credit_Memo_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Memo_Field_Validation</fullName>
    <active>true</active>
    <description>This is used to restrict the user to modify Order once the Order status become Credit memo</description>
    <errorConditionFormula>AND(

ISPICKVAL( Status, &apos;Credit Memo&apos;),
NOT(ISCHANGED(Status )),NOT( ISCHANGED( OwnerId ))

)</errorConditionFormula>
    <errorMessage>You Can&apos;t modify Credit Memo Order</errorMessage>
</ValidationRule>