force-app/main/default/objects/Order/validationRules/Order_Amount_Validatioon.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Amount_Validatioon</fullName>
    <active>true</active>
    <description>This is used to restrict the user to create 0 amount Order</description>
    <errorConditionFormula>AND(  NOT(RecordType.Name =&apos;Credit Memo&apos;),NOT( ISNEW() ) , ISCHANGED( Status ) ,Total_Amount__c &lt; 0)</errorConditionFormula>
    <errorMessage>Total Amount can&apos;t be less than Zero</errorMessage>
</ValidationRule>