force-app/main/default/objects/Order/validationRules/Order_Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Opportunity_Required</fullName>
    <active>true</active>
    <description>This is used to Validate Order Must have Opportunity Before activation</description>
    <errorConditionFormula>AND(ISPICKVAL( Status , &apos;Activated&apos;) , ISBLANK( OpportunityId ) )</errorConditionFormula>
    <errorDisplayField>OpportunityId</errorDisplayField>
    <errorMessage>Opportunity is required to Activate the Order</errorMessage>
</ValidationRule>