force-app/main/default/objects/Order/validationRules/Order_Payment_Type_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Payment_Type_Validation</fullName>
    <active>true</active>
    <description>If the Status of the field is &quot;Paid&quot; then make the &quot;Payment Type&quot; is mandatoryAND(
TEXT( Status__c ) = &quot;decline&quot;,
ISBLANK(TEXT( Reason__c)))</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &apos;Paid&apos;), 
ISBLANK(TEXT( PaymentType__c)),
NOT( ISCHANGED(  OrderPaidDate__c )),
NOT( ISCHANGED( OwnerId ))

)</errorConditionFormula>
    <errorDisplayField>PaymentType__c</errorDisplayField>
    <errorMessage>Please select the type of payment</errorMessage>
</ValidationRule>