force-app/main/default/objects/Order/validationRules/Order_Upwork_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Upwork_Status_Validation</fullName>
    <active>true</active>
    <description>This is used to restrict the user to direct Paid the order from the Draaft</description>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status),&quot;Draft&quot;), ISPICKVAL(Status , &apos;Paid&apos;) )</errorConditionFormula>
    <errorMessage>You Can’t Change status Draft to Paid</errorMessage>
</ValidationRule>