force-app/main/default/objects/Order/validationRules/Status_Based_On_Prior_Status_Activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Based_On_Prior_Status_Activated</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     
     ISPICKVAL(PRIORVALUE(Status),&quot;Activated&quot;),
     ISPICKVAL(Status, &quot;Draft&quot;)
      
)</errorConditionFormula>
    <errorMessage>If prior value of the status is &quot;Activated&quot;, then it couldn&apos;t be edited to &quot;Draft&quot;</errorMessage>
</ValidationRule>