force-app/main/default/objects/Order/listViews/Crdit_Memo_Orders.listView-meta.xml
<ListView>
    <fullName>Crdit_Memo_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Credit_Memo</value>
    </filters>
    <label>Crdit Memo Orders</label>
</ListView>